2022-10-06T08:25:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195657171
* notice: last 14d: unq all: 3 28
* notice: prev accum: outdated-unq outdated-all / unq all: 199 371 / 217 400
* notice: next accum: outdated-unq outdated-all / unq all: 199 371 / 216 399
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -1 / 1 2
* notice: removed / changed dates: [] / [2022-09-22]

2022-10-06T01:37:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3193906871
* notice: last 14d: unq all: 3 29
* notice: prev accum: outdated-unq outdated-all / unq all: 198 370 / 216 399
* notice: next accum: outdated-unq outdated-all / unq all: 199 371 / 217 400
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-21] / [2022-10-05]

2022-10-05T01:44:18Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3186707354
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 197 368 / 216 398
* notice: next accum: outdated-unq outdated-all / unq all: 198 370 / 216 399
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-20] / []

2022-10-04T16:28:54Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3183819189
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 197 368 / 216 399
* notice: next accum: outdated-unq outdated-all / unq all: 197 368 / 216 398
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-20]

2022-10-04T01:47:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3178798377