@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-06T08:25:11Z",
-  "count" : 2,
+  "timestamp" : "2022-10-06T16:28:42Z",
+  "count" : 1,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -1, +3 ],
+  "count_decinc" : [ -2, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +2 ]
