@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-06T08:25:11Z",
+  "timestamp" : "2022-10-06T16:28:42Z",
   "count_outdated" : 371,
   "uniques_outdated" : 199,
-  "count" : 399,
+  "count" : 398,
   "uniques" : 216,
   "clones" : [
     {
       "timestamp": "2022-09-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
