@@ -1,3 +1,11 @@
+2022-10-06T16:28:42Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3198841756
+* notice: last 14d: unq all: 3 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 199 371 / 216 399
+* notice: next accum: outdated-unq outdated-all / unq all: 199 371 / 216 398
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -1 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-09-22]
+
 2022-10-06T08:25:11Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195657171
 * notice: last 14d: unq all: 3 28
